# lista-2-oscarkemuel

./: .gitignore  README.md
all_any_none_of/: README.md
all_any_none_of/include/: all_any_none_of.h
all_any_none_of/src/: main.cpp
copy/: CMakeLists.txt  README.md
copy/include/: copy.h
copy/src/: main.cpp
equal/: README.md
equal/include/: equal.h
equal/src/: main.cpp
find/: README.md
find/include/: find.h
find/src/: main.cpp
find_if/: README.md
find_if/include/: find_if.h
find_if/src/: main.cpp
minmax/: README.md
minmax/include/: minmax.h
minmax/src/: main.cpp
partition/: README.md
partition/include/: partition.h
partition/src/: main.cpp
reverse/: README.md
reverse/include/: reverse.h
reverse/src/: main.cpp
rotate/: README.md
rotate/include/: rotate.h
rotate/src/: main.cpp
sort/: README.md
sort/include/: sort.h
sort/src/: main.cpp
unique/: README.md
unique/include/: unique.h
unique/src/: main.cpp
